Fixed wrong position of got to current version archive link

--- a/src/styles/components/_archived.scss
+++ b/src/styles/components/_archived.scss
@@ -52,3 +52,11 @@
   margin-bottom: 0;
   margin-top: 1.5rem;
 }
+
+.archived-link-current {
+  text-decoration: none;
+
+  &:hover {
+    text-decoration: underline;
+  }
+}
